--- a/_sources/intro.ipynb
+++ b/_sources/intro.ipynb
@@ -27,20 +27,21 @@
     "There are two versions of this module running side-by-side. \n",
     "* MAS31003 (Topics in Mathematical Biology) is the version of the course for 3rd year students. \n",
     "* MAS61024 (Further Topics in Mathematical Biology) is the version of the course for 4th year students. \n",
-    "The main lecture material is the same for all students, but 4th years have to complete some additional work. Please [click here](C:/Users/sm1ab/Documents/Jupyter/mathbio23/_build/html/level4.html) for more details.\n",
+    "\n",
+    "The main lecture material is the same for all students, but 4th years have to complete some additional work. Please [click here](/level4.html) for more details.\n",
     "`````\n",
     "\n",
     "Below are some key details about the module:\n",
     "\n",
     "* We have two in-person lectures a week: \n",
     "    * Mondays 9am - Hicks LT5\n",
-    "    * Thursdays 2pm - Firth Court F02\n",
+    "    * Thursdays 2pm - Hicks LT6\n",
     "* For two of the lectures we will instead have a computer lab - Mondays of week 5 and week 10 in Alfred Denny Building A04.\n",
     "* Pre-recorded videos will also be made available should you not be able to attend a lecture, and/or for revision.\n",
     "* Assessment for 3rd year students is 80% exam and 20% project. \n",
-    "* Assessment for 4th year students additionally will produce an independent project report (50% exam, 10% project, 40% independent study report).\n",
+    "* Assessment for 4th year students is 50% exam, 10% project, and 40% independent study report. Please [click here](/level4.html) for more details.\n",
     "* The project component takes place in week 6, with a due date of Monday week 8.\n",
-    "* I runn two student drop-in hours each week:\n",
+    "* I will run two student drop-in hours each week:\n",
     "    * In my office (G27b) Mondays 10am, either online or in-person. Best for working through questions and problems from the material and homeworks. You are strongly encouraged to book slots using my [Google Calendar appointments page](https://calendar.google.com/calendar/u/0/selfsched?sstoken=UVA1NV9VbkZzaWFqfGRlZmF1bHR8ZjM4N2Y1MmYyYjcxMmUzMjgzMjQ2NDcyNjc3MTRkYzM).\n",
     "    * In the Jessop West cafe Thursdays 11.30am. Best for more informal questions and general chats about mathematical biology, science and life.\n",
     "* Notes are provided as HTML and PDF. \n",
