--- a/_sources/level4.ipynb
+++ b/_sources/level4.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# 4th year information\n",
     "\n",
-    "This webpage summarises some important details for students in their 4th year taking MAS61024 *Further Topics in Mathematical Biology*.\n",
+    "````{warning}\n",
+    "This webpage summarises some important details only for students in their 4th year taking MAS61024 *Further Topics in Mathematical Biology*.\n",
+    "````\n",
     "\n",
     "The MAS61024 version of the module is worth 15 credits - 5 more than the 3rd year version, therefore requiring additional work (roughly 50 hours extra). Importantly, 4th year students will undertake all of the same learning activities and assessments as the 3rd year students. This means students should:\n",
     "\n",
@@ -57,6 +59,15 @@
     "\n",
     "### Disease dynamics with free-living parasites (Alex Best)\n",
     "Classic models for infectious disease spread assume that infection is spread through direct contact between infected and susceptible hosts. In many cases, however, parasites can be ‘free-living’, meaning they survive outside of hosts for some time before being picked up at a later point by susceptible hosts. This assumption requires a different model set-up, and can lead to rather different long-term dynamics, in particular sustained cycles. In this project you will develop models where there are free-living parasites and explore the possible dynamics that can occur. You will use a combination of analysis of ordinary differential equations and numerical simulations.\n",
+    "\n",
+    "----\n",
+    "### Modelling neuronal dynamics (Alexander Fletcher)\n",
+    "Neurons are arguably the most important type of cell in the nervous system. They maintain a negatively charged electrical potential across their membrane, as a result of the flow of charged ions through ion pumps and ion channels in the membrane. When a neuron’s membrane potential reaches a certain threshold, the opening and closing of different ion channels creates an action potential or ‘spike’. Neurons encode information in the timing and frequency of their spikes and they communicate this information to other neurons through synapses. Understanding how this happens is one of the greatest frontiers of neuroscience. In this project, you will study and compare one- and two-variable ODE models of neuronal dynamics, focusing on how individual neurons generate action potentials, using a combination of analytic and numerical techniques.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "### Modelling delays in gene regulation (Alexander Fletcher)\n",
+    "Gene regulatory networks (GRNs) play a major role in a large number of normal life processes, including cell differentiation, metabolism, the cell cycle, and signal transduction. A common method for mathematically modelling GRN is to represent them by concentrations of different mRNAs and proteins, and to write the dynamics as a system of ODEs using the law of mass action for individual reactions. However, transcription and translation during gene expression can take place over non-negligible time periods, motivating the use of delay differential equations (DDEs) with constant or distributed delays instead of ODEs, which can exhibit richer dynamics such as oscillatory gene expression. In this project, you will study and compare the dynamics of ODE and DDE models of one- and two-variable GRNs, using a combination of analytic and numerical techniques.\n",
     "\n",
     "----\n",
     " \n",
