--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## A first population model \n",
     "\n",
-    "Our aim in this course is to model the dynamics of populations over time. By 'population' we simply mean some collection of individuals that are subject to the same underlying mechanisms. For example, we may consider the human population of Sheffield, or the tapir population of South America, or the maize crop population of a field in Nigeria. In later chapters we will move to smaller biological scales, considering perhaps less intuitive definitions of populations, such as of cells in the body, or proteins within cells. However, a key message to take from this course is that we can consider any and all biological populations in the same way from a modelling perspective, and subject to the same fundamental of biological mechanisms. \n",
+    "Our aim in this course is to model the dynamics of populations over time. By 'population' we simply mean some collection of individuals that are subject to the same underlying mechanisms. For example, we may consider the human population of Sheffield, or the tapir population of South America, or the maize crop population of a field in Nigeria. In later chapters we will move to smaller biological scales, considering perhaps less intuitive definitions of populations, such as of cells in the body, or proteins within cells. However, a key message to take from this course is that we can consider any and all biological populations in the same way from a modelling perspective, and subject to the same fundamental of biological mechanisms.  \n",
     "\n",
     "We will model these dynamics using *oridnary differential equations*, and our focus will be purely on how the size of a population varies over time. We will not consider where individuals are in space - this would likely require extending our methods to *partial differential equation* models, and plenty of excellent courses and textbooks can be found to explore such systems. When we talk about the 'size' of a population, we might think we mean the number of individuals in the population. However, as we will be using ordinary differential equations we need our variables to be continuous, not discrete. We will therefore instead keep track of a population's *density* - the number of individuals within some unit area. \n",
     "\n",
@@ -205,11 +205,144 @@
     "What do these results tell us? That pest outbreaks such as the spruce budworm are likely to be driven by the pressure from predation. We can also see that, due to the bistability, sudden outbreaks can occur if there are relatively small changes to the environment. We have achieved this insight without having to do any detailed mathematical derivations, but by applying mathematical reasoning and biological interpretation - these are two key skills we will develop over this course.\n",
     "\n",
     "\n",
-    "`````{admonition} Have a go\n",
+    "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
-    "Use the [budworm model python code](https://colab.research.google.com/drive/1eNeeMymrZ5aGKg7OFT4V_4rYATuIBJaj#scrollTo=V_y6kEU5JfxP) to explore the model. Start with a high value of $\\rho$ and gradually reduce the value to see how the behaviour changes. You can then alter other model parameters if you wish. \n",
-    "````` \n",
+    "This code will produce a time-course and plot of rates for the dynamics of spruce budworm subject to predation by birds. The dynamics are governed by the following ordinary differential equation:\n",
+    "dNdt=r0N(1−N/K)−ρN/(N+A) \n",
     "\n",
+    "To use the code, click in the cell below and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. At the bottom of the page you will then see a set of sliders to choose the values of the 4 parameters (though I suggest you only vary  ρ ). When you have chosen your values click on 'Run Interact' and you will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
+    "````` \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8873bafc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61fd3d36766a4251914338659c10c7c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=20.0, description='\\rrho', max=20.0, step=1.0),))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ffa5a4eb971a4f9b9fe64660feb6a75f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=5.0, description='r_0', max=10.0, step=1.0), FloatSlider(value=10.0, descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a20adaa1d399421199151c2b911ce6ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"hide-input\",\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "#@title\n",
+    "# Import the necessary libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import odeint\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
+    "\n",
+    "\n",
+    "# Create widgets\n",
+    "rhow=widgets.FloatSlider(min=0, max=20, step=1, value=20, description='\\rrho')\n",
+    "r0w=widgets.FloatSlider(min=0, max=10, step=1, value=5, description='r_0')\n",
+    "Kw=widgets.FloatSlider(min=0, max=15, step=1, value=10, description='K')\n",
+    "Aw=widgets.FloatSlider(min=0, max=2.5, step=0.5, value=1, description='A')\n",
+    "\n",
+    "\n",
+    "# Function for the population dynamics\n",
+    "def budworm(N,t,r0,K,rho,A):\n",
+    "    dN = r0*N*(1-N/K)-rho*N/(N+A)\n",
+    "    return dN\n",
+    "\n",
+    "# Function called by the widget\n",
+    "def runbudworm(rho=20,r0=5,K=10,A=1):\n",
+    "    \n",
+    "    # Find parameter values and ICs from widgets\n",
+    "    N0=8\n",
+    "    N1=2\n",
+    "\n",
+    "    # Timespan\n",
+    "    tc = np.linspace(0, 10, 1000)  \n",
+    "    \n",
+    "    # Run the ODEs with the 2 different ICs\n",
+    "    Nc = odeint(budworm, N0, tc,args=(r0,K,rho,A))\n",
+    "    Nd = odeint(budworm, N1, tc,args=(r0,K,rho,A))\n",
+    "    \n",
+    "    # Nullclines\n",
+    "    nn=np.linspace(0,15,100)\n",
+    "    rnull=r0*(1-nn/K)\n",
+    "    pnull=rho/(nn+A)\n",
+    "    \n",
+    "    # Plotting commands\n",
+    "    plt.rcParams['figure.figsize'] = [12, 4]\n",
+    "    plt.rcParams.update({'font.size': 16})\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    ax1.plot(tc, Nc[:], \"r\") \n",
+    "    ax1.plot(tc, Nd[:], \"r:\")\n",
+    "    ax1.set(xlabel='Time', ylabel='Densities')\n",
+    "    ax1.axis([0,10,0,10])\n",
+    "    ax2.plot(nn,rnull,'r',label='r(N)')\n",
+    "    ax2.plot(nn,pnull,'k',label='p(N)')\n",
+    "    ax2.set(xlabel='$N$', ylabel='Rates')\n",
+    "    ax2.legend()\n",
+    "    ax2.axis([0, 12, 0, 10])\n",
+    "    \n",
+    "    return()\n",
+    "\n",
+    "# Display the widgets\n",
+    "#w = interactive(runbudworm,rho=(0,20,1),r0=(0,10,1),K=(5,15,1),A=(0,2.5,0.5))\n",
+    "#display(w)\n",
+    "\n",
+    "ui1 = widgets.HBox([rhow])\n",
+    "ui2 = widgets.HBox([r0w, Kw, Aw])\n",
+    "out = widgets.interactive_output(runbudworm, {'rho': rhow, 'r0': r0w, 'K': Kw, 'A': Aw})\n",
+    "   \n",
+    "display(ui1,ui2,out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eecaa348",
+   "metadata": {},
+   "source": [
     "## 3 key points\n",
     "1. Parameters in a model represent rates of change, and their functional form implies how that process works.\n",
     "2. The logistic equation goes to a long-term equilibrium, and we do not need to explicitly solve it to understand its key behaviours.\n",
@@ -219,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a25b7d",
+   "id": "41d63fe1",
    "metadata": {},
    "outputs": [],
    "source": []
