--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -216,14 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8873bafc",
-   "metadata": {},
+   "execution_count": 5,
+   "id": "9d41b7ff",
+   "metadata": {
+    "tags": [
+     "\"hide-input\""
+    ]
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61fd3d36766a4251914338659c10c7c7",
+       "model_id": "6f025c539d604d109aa5fe128284287c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffa5a4eb971a4f9b9fe64660feb6a75f",
+       "model_id": "ccbf924c6002426aa332cda686bc7f12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a20adaa1d399421199151c2b911ce6ac",
+       "model_id": "5e9ebe45e5a84e4bb45c290c24ca7ac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,12 +268,6 @@
     }
    ],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"hide-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
     "\n",
     "#@title\n",
     "# Import the necessary libraries\n",
@@ -324,6 +322,7 @@
     "    ax2.set(xlabel='$N$', ylabel='Rates')\n",
     "    ax2.legend()\n",
     "    ax2.axis([0, 12, 0, 10])\n",
+    "    plt.show()\n",
     "    \n",
     "    return()\n",
     "\n",
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eecaa348",
+   "id": "097777f2",
    "metadata": {},
    "source": [
     "## 3 key points\n",
@@ -352,13 +351,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d63fe1",
+   "id": "2997bfed",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
