--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -208,26 +208,26 @@
     "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
     "This code will produce a time-course and plot of rates for the dynamics of spruce budworm subject to predation by birds. The dynamics are governed by the following ordinary differential equation:\n",
-    "dNdt=r0N(1−N/K)−ρN/(N+A) \n",
+    "$dN/dt=r0N(1−N/K)−ρN/(N+A)$ \n",
     "\n",
-    "To use the code, click in the cell below and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. At the bottom of the page you will then see a set of sliders to choose the values of the 4 parameters (though I suggest you only vary  ρ ). When you have chosen your values click on 'Run Interact' and you will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
+    "*To use the code, click the rocket icon at the top of the page, and then click Colab*. This will take you to a live version of this page where you can run the code. Scroll down to the code cell and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. **You may se a warning about loading content from Github - click 'Run anyway'.** You will then see a set of sliders to choose the values of the 4 parameters (though I suggest you focus on varying $\\rho$). When you have chosen your values click on 'Run Interact' and you will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
     "````` \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9d41b7ff",
    "metadata": {
     "tags": [
-     "\"hide-input\""
+     "hide-input"
     ]
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f025c539d604d109aa5fe128284287c",
+       "model_id": "4aeeb1a5d8ba4c2da70530dfb6f31995",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccbf924c6002426aa332cda686bc7f12",
+       "model_id": "d403351d493543ec8d6bda845ac19e4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e9ebe45e5a84e4bb45c290c24ca7ac6",
+       "model_id": "fd1a0f2609ef43d2b07a3c94eea10dd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +358,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
