--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -207,10 +207,12 @@
     "\n",
     "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
-    "This code will produce a time-course and plot of rates for the dynamics of spruce budworm subject to predation by birds. The dynamics are governed by the following ordinary differential equation:\n",
-    "$dN/dt=r0N(1−N/K)−ρN/(N+A)$ \n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
-    "*To use the code, click the rocket icon at the top of the page, and then click Colab*. This will take you to a live version of this page where you can run the code. Scroll down to the code cell and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. **You may se a warning about loading content from Github - click 'Run anyway'.** You will then see a set of sliders to choose the values of the 4 parameters (though I suggest you focus on varying $\\rho$). When you have chosen your values click on 'Run Interact' and you will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
+    "This code will produce a time-course and plot of rates for the dynamics of spruce budworm subject to predation by birds. The dynamics are governed by the following ordinary differential equation:\n",
+    "$dN/dt=r0N(1−N/K)−ρN/(N+A)$ .\n",
+    "\n",
+    "You will see a set of sliders to choose the values of the 4 parameters (though I suggest you focus on varying $\\rho$). You will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
     "````` \n"
    ]
   },
