--- a/_sources/ch3.ipynb
+++ b/_sources/ch3.ipynb
@@ -8,7 +8,7 @@
     "# 3 - Competition continued \n",
     "\n",
     "## Linear stability analysis\n",
-    "\n",
+    " \n",
     "Beyond this graphical method it would obviously be useful if we can formally characterise these equilibria in some way, and in particular assess when each will be an attracting end-point of the dynamics (the equilibrium is **stable**) and when not (the equilibrium is **unstable**). Much like we did with the logistic model, we can assess the local stability of steady states of a system by linearising around the equilibrium and finding the eigenvalues by studying the Jacobian matrix. Let us suppose that $dR/dt=f(R,G)$ and $dG/dt=g(R,G)$. Then the Jacobian matrix is made up of the partial derivatives of $f$ and $g$,\n",
     "\n",
     "\\begin{align*}\n",
@@ -115,10 +115,102 @@
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
-    "Use the [compeititon model python code](https://colab.research.google.com/drive/1xVJyADzg6Tnj57-M4OJ2fWCtnOSVEX-S#scrollTo=HYidO37fYlgo) to explore the competiiton model. See if you can choose parameter values to produce each of the 4 key outcomes.\n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
+    "\n",
+    "This code will produce a time-course and phase portrait for the dynamics of two competing species, here assumed to be Red and Grey Squirrels. The dynamcis are governed by the following ordinary differential equations:\n",
+    "$$ \\frac{dR}{dt}=R(a-R-bG)$$\n",
+    "$$\\frac{dG}{dt}=G(c-dR-G)$$.\n",
+    "\n",
+    "You will see a set of sliders to choose the values of the 4 parameters, and boxes for you to enter two lots of initial conditions for $R$ and $G$. When you have chosen your values you will see two plots appear - a time course for Red and Grey squirrels, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue)). You can then change the parameter values or initial conditions.\n",
     "\n",
     "`````\n",
-    " \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b138d406",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#@title\n",
+    "# Import the necessary libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import odeint\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
+    "\n",
+    "aw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=3, description='a')\n",
+    "bw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=0.5, description ='b')\n",
+    "cw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=3,description='c')\n",
+    "dw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=0.75,description='d')\n",
+    "\n",
+    "R0_1w=widgets.BoundedFloatText(value=3,min=0,max=5,description='1st R(0)')\n",
+    "G0_1w=widgets.BoundedFloatText(value=3,min=0,max=5,description='1st G(0)')\n",
+    "R0_2w=widgets.BoundedFloatText(value=1,min=0,max=5,description='2nd R(0)')\n",
+    "G0_2w=widgets.BoundedFloatText(value=1,min=0,max=5,description='2nd G(0)')\n",
+    "\n",
+    "u1 = widgets.HBox([R0_1w, G0_1w])\n",
+    "u2 = widgets.HBox([R0_2w, G0_2w])\n",
+    "\n",
+    "#Lotka-Volterra dynamics\n",
+    "def competition(N,t,a,b,c,d):\n",
+    "    R=N[0]\n",
+    "    G=N[1]\n",
+    "    dR = R*(a - R - b*G)\n",
+    "    dG = G*(c - G - d*R)\n",
+    "    return [dR,dG]\n",
+    "\n",
+    "def runsquirrels(a,b,c,d,R0_1,G0_1,R0_2,G0_2):\n",
+    "\n",
+    "    N0=[R0_1,G0_1]\n",
+    "    N1=[R0_2,G0_2]\n",
+    "\n",
+    "    tc = np.linspace(0, 10, 1000)  \n",
+    "    Nc = odeint(competition, N0, tc,args=(a,b,c,d))\n",
+    "    Nd = odeint(competition, N1, tc,args=(a,b,c,d))\n",
+    "    \n",
+    "    plt.rcParams['figure.figsize'] = [12, 4]#\n",
+    "    plt.rcParams.update({'font.size': 16})\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    \n",
+    "    ax1.plot(tc, Nc[:,0], \"r\", label=\"Reds\") \n",
+    "    ax1.plot(tc, Nc[:,1], \"k\", label=\"Greys\")\n",
+    "    ax1.plot(tc, Nd[:,0], \"r:\")\n",
+    "    ax1.plot(tc, Nd[:,1], \"k:\")\n",
+    "    ax1.set(xlabel='Time', ylabel='Densities')\n",
+    "    ax1.legend()\n",
+    "    ax1.axis([0,10,0,5])\n",
+    "\n",
+    "    rr=np.linspace(0,10,5)\n",
+    "    rnull=(a-rr)/b\n",
+    "    gnull=c-d*rr\n",
+    "    ax2.plot(Nc[:,0],Nc[:,1],'b')\n",
+    "    ax2.plot(Nd[:,0],Nd[:,1],'b')\n",
+    "    ax2.plot(rr,rnull,'r')\n",
+    "    ax2.plot(rr,gnull,'k')\n",
+    "    ax2.axis([0, 5, 0, 5])\n",
+    "    ax2.set(xlabel='Red Squirrels', ylabel='Grey Squirrels')\n",
+    "    plt.show()\n",
+    "    return()\n",
+    "\n",
+    "out = widgets.interactive_output(runsquirrels, {'a': aw, 'b': bw, 'c': cw, 'd': dw, 'R0_1': R0_1w, 'G0_1': G0_1w, 'R0_2': R0_2w, 'G0_2': G0_2w})   \n",
+    "display(aw,bw,cw,dw)\n",
+    "display(u1,u2,out)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dddb6f1",
+   "metadata": {},
+   "source": [
     "## A bifurcation diagram\n",
     "\n",
     "````{card}\n",
@@ -147,13 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6b591f",
+   "id": "2a62a625",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
