--- a/_sources/ch4.ipynb
+++ b/_sources/ch4.ipynb
@@ -8,7 +8,7 @@
     "# 4 - Predator-Prey models \n",
     "\n",
     "## A first model\n",
-    "\n",
+    " \n",
     "Of course, species in the natural world do not just engage in friendly competition for resources. Nature is 'red in tooth and claw', with many species relying on others as a primary food source: foxes and rabbits; lions and zebras; ladybirds and aphids. Such predator-prey interactions will have a similar structure to the competition models we considered above, but now one species benefits from the interaction. Calling the prey density $N$ and the predator density $P$, the simplest model would look like this:\n",
     "\n",
     "\\begin{align}\n",
@@ -122,26 +122,116 @@
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
-    "Use the [predator-prey model python code](https://colab.research.google.com/drive/1TRT-ca0aF0F2Y4Ge0Z3DSEpMMdR--v1A) to explore the model. In particular start with a high value of $\\alpha$ and gradually reduce it to see the limit cycle emerge.\n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
+    "\n",
+    "This code will produce a time-course and phase portrait for the dynamics of a predator and its prey. The dynamics are governed by the following ordinary differential equations:\n",
+    "$$ \\frac{dN}{dt}=N\\left(a-\\frac{bP}{N+A}-\\alpha N\\right)$$\n",
+    "$$\\frac{dP}{dt}=P\\left(-c+\\frac{dN}{N+A}\\right)$$.\n",
+    "\n",
+    "You will see a set of sliders to choose the values of the 6 parameters, and boxes for you to enter two lots of initial conditions for $N$ and $P$. You will see two plots appear - a time course for the Prey and the Predator, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue/green)). You can then change the parameter values or initial conditions to update the plots.\n",
+    "\n",
+    "\n",
     "`````\n",
     "\n",
-    "\n",
-    "## 3 key points\n",
-    "1. The simplest predator-prey model produces 'centres' - structuarally unstable cycles.\n",
-    "2. A more realistic predator-prey model can produce stable 'limit cycles'.\n",
-    "3. We cann the transition from an equilibrium to a limit cycle a Hopf bifurcation."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542223cd",
-   "metadata": {},
+   "id": "6429dc70",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#@title\n",
+    "# Import the necessary libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import odeint\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
+    "\n",
+    "aw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=4, description='a')\n",
+    "bw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=1, description ='b')\n",
+    "cw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=0.5,description='c')\n",
+    "dw=widgets.FloatSlider(min=0.5, max=5, step=0.25, value=2,description='d')\n",
+    "alphaw=widgets.FloatSlider(min=0, max=5, step=0.25, value=4,description='alpha')\n",
+    "Aw=widgets.FloatSlider(min=0, max=5, step=0.25, value=1,description='A')\n",
+    "\n",
+    "N0_1w=widgets.BoundedFloatText(value=1.5,min=0,max=5,description='1st N(0)')\n",
+    "P0_1w=widgets.BoundedFloatText(value=6,min=0,max=10,description='1st P(0)')\n",
+    "N0_2w=widgets.BoundedFloatText(value=0.5,min=0,max=5,description='2nd N(0)')\n",
+    "P0_2w=widgets.BoundedFloatText(value=4,min=0,max=10,description='2nd P(0)')\n",
+    "\n",
+    "u1 = widgets.HBox([N0_1w, P0_1w])\n",
+    "u2 = widgets.HBox([N0_2w, P0_2w])\n",
+    "\n",
+    "#Lotka-Volterra dynamics\n",
+    "def predprey(x,t,a,b,c,d,alpha,A):\n",
+    "    N=x[0]\n",
+    "    P=x[1]\n",
+    "    dN = N*(a-b*P/(N+A)-alpha*N)\n",
+    "    dP = P*(-c+d*N/(N+A))\n",
+    "    return [dN,dP]\n",
+    "\n",
+    "def runpredprey(a,b,c,d,alpha,A,N0_1,P0_1,N0_2,P0_2):\n",
+    "    \n",
+    "    N0=[N0_1,P0_1]\n",
+    "    N1=[N0_2,P0_2]\n",
+    "\n",
+    "    tc = np.linspace(0, 50, 1000)  \n",
+    "    Nc = odeint(predprey, N0, tc,args=(a,b,c,d,alpha,A))\n",
+    "    Nd = odeint(predprey, N1, tc,args=(a,b,c,d,alpha,A))\n",
+    "    \n",
+    "    plt.rcParams['figure.figsize'] = [12, 4]#\n",
+    "    plt.rcParams.update({'font.size': 16})\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    \n",
+    "    ax1.plot(tc, Nc[:,0], \"r\", label=\"Prey\") \n",
+    "    ax1.plot(tc, Nc[:,1], \"k\", label=\"Predators\")\n",
+    "    ax1.plot(tc, Nd[:,0], \"r:\")\n",
+    "    ax1.plot(tc, Nd[:,1], \"k:\")\n",
+    "    ax1.set(xlabel='Time', ylabel='Densities')\n",
+    "    ax1.legend()\n",
+    "    ax1.axis([0,50,0,10])\n",
+    "\n",
+    "    nn=np.linspace(0,10,100)\n",
+    "    nnull=(a-alpha*nn)*(nn+A)/b\n",
+    "    pnull=A*c/(d-c)\n",
+    "    ax2.plot(Nc[:,0],Nc[:,1],'b')\n",
+    "    ax2.plot(Nd[:,0],Nd[:,1],'g')\n",
+    "    ax2.plot(nn,nnull,'r')\n",
+    "    ax2.axvline(x=pnull)\n",
+    "    ax2.axis([0, 5, 0, 5])\n",
+    "    ax2.set(xlabel='Prey', ylabel='Predators')\n",
+    "    ax2.axis([0,2,0,10])\n",
+    "    plt.show()\n",
+    "    return()\n",
+    "\n",
+    "out = widgets.interactive_output(runpredprey, {'a': aw, 'b': bw, 'c': cw, 'd': dw, 'alpha': alphaw, 'A': Aw, 'N0_1': N0_1w, 'P0_1': P0_1w, 'N0_2': N0_2w, 'P0_2': P0_2w})\n",
+    "display(alphaw,Aw)\n",
+    "display(aw,bw,cw,dw)\n",
+    "display(u1,u2, out)     \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81a763c4",
+   "metadata": {},
+   "source": [
+    "## 3 key points\n",
+    "1. The simplest predator-prey model produces 'centres' - structuarally unstable cycles.\n",
+    "2. A more realistic predator-prey model can produce stable 'limit cycles'.\n",
+    "3. We cann the transition from an equilibrium to a limit cycle a Hopf bifurcation."
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
