--- a/_sources/ch11.ipynb
+++ b/_sources/ch11.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## 11-12 Project Week \n",
     "\n",
-    "In weeks 6 and 7 you will complete a project that is worth 20% of your module mark (for 3rd year students, a bit less for 4th years). There are two good reasons for setting this project assessment:\n",
+    "In weeks 6 and 7 you will complete a project that is worth 20% of your module mark for 3rd year students, and 10% for 4th years. There are two good reasons for setting this project assessment: \n",
     "\n",
     "1. I can think of few examples where you will find yourself doing a job where you are asked to conduct mathematics work (or any work for that matter) in an exam-style setting. It is **much** more common for you to be set project work that you should conduct over days or weeks and return a written or oral report. Project work is absolutely the day-to-day life of a mathematical biologist, and so it is a good experience for you to have.\n",
     "2. Exam-based assessments will only play to the strengths of, and so reward, some learners. It's important for us to ensure that we are providing all students with a chance to shine by offering different assessment styles.\n",
