--- a/_sources/ch16.ipynb
+++ b/_sources/ch16.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 16 - Oscillating transcription and autoregulation\n",
     "\n",
-    "## Oscillating transcription\n",
+    "## Oscillating transcription \n",
     "\n",
     "In our last model we allowed that the transcription rate, $latex R(t)$, might depend on time but then just assumed it was constant. What if we instead assume we have an oscillating transcription rate? We will often find that we end up with expressions that are too complicated to integrate explicitly (and in that case we would probably just numerically integrate it on a computer), but if we take a sinusoidal function we can make some progress.\n",
     "\n",
@@ -22,7 +22,7 @@
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
-    "Show that the initial solution for $latex M(t)$ is given by,\n",
+    "Show that the initial solution for $M(t)$ is given by,\n",
     "\n",
     "\\begin{equation}\n",
     "r_0e^{-\\mu t}\\left[\\frac{1}{\\mu}e^{\\mu t}+\\frac{\\delta e^{\\mu t}}{\\mu^2+\\omega^2}(\\mu\\sin(\\omega t)-\\omega \\cos(\\omega t))+C\\right],\n",
@@ -100,7 +100,7 @@
     "where $ \\theta=tan^{-1}(\\omega/\\mu)$. This then tells us that, in the long-term, the mRNA concentration oscillates around the value of $ r_0/\\mu$ (the same value as in the constant case), with the same period as the inputted transcription rate (because the 'time' term in the cosine is $ \\omega t$)), but delayed behind the input by amount $latex \\theta$. We can follow a similar approach to get an expression for $ P(t)$ as well if we wish but we won't cover that here. A time-course of these dynamics is shown below, showing the regular fluctuations in expression.\n",
     "\n",
     "````{card}\n",
-    "<img src='oscilatting.png' height=\"300\" alt=\"Time course of gene expression with oscillating transcription\">\n",
+    "<img src='oscillating.png' height=\"300\" alt=\"Time course of gene expression with oscillating transcription\">\n",
     "\n",
     "*Figure: Time course of gene expression with oscillating transcription.*\n",
     "````\n",
