--- a/_sources/ch4.ipynb
+++ b/_sources/ch4.ipynb
@@ -120,13 +120,15 @@
     "*Figure: Example of a Hopf bifurcation in the predator-prey model, equations (1.4.3)-(1.4.4) with a type II functional response. Parameter values: $a=5$, $b=1$, $c=0.5$, $d=2$, $A=1$.*\n",
     "````\n",
     "\n",
-    "`````{admonition} Have a go\n",
+    "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
     "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
     "This code will produce a time-course and phase portrait for the dynamics of a predator and its prey. The dynamics are governed by the following ordinary differential equations:\n",
-    "$$ \\frac{dN}{dt}=N\\left(a-\\frac{bP}{N+A}-\\alpha N\\right)$$\n",
-    "$$\\frac{dP}{dt}=P\\left(-c+\\frac{dN}{N+A}\\right)$$.\n",
+    "\\begin{align*}\n",
+    "\\frac{dN}{dt}&=N\\left(a-\\frac{bP}{N+A}-\\alpha N\\right)\\\\\n",
+    "\\frac{dP}{dt}&=P\\left(-c+\\frac{dN}{N+A}\\right).\n",
+    "\\end{align*}\n",
     "\n",
     "You will see a set of sliders to choose the values of the 6 parameters, and boxes for you to enter two lots of initial conditions for $N$ and $P$. You will see two plots appear - a time course for the Prey and the Predator, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue/green)). You can then change the parameter values or initial conditions to update the plots.\n",
     "\n",
@@ -142,7 +144,7 @@
    "id": "6429dc70",
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-input"
     ]
    },
    "outputs": [],
