--- a/_sources/ch3.ipynb
+++ b/_sources/ch3.ipynb
@@ -113,13 +113,15 @@
     "\n",
     "In contrast, in case (d) we have $a<bc$ and $c<ad$, meaning $a < bad$ and so $1<bd$. Therefore $D<0$ and C is a saddle point.\n",
     "\n",
-    "`````{admonition} Have a go\n",
+    "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
     "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
-    "This code will produce a time-course and phase portrait for the dynamics of two competing species, here assumed to be Red and Grey Squirrels. The dynamcis are governed by the following ordinary differential equations:\n",
-    "$$ \\frac{dR}{dt}=R(a-R-bG)$$\n",
-    "$$\\frac{dG}{dt}=G(c-dR-G)$$.\n",
+    "This code will produce a time-course and phase portrait for the dynamics of two competing species, here assumed to be Red and Grey Squirrels. The dynamics are governed by the following ordinary differential equations:\n",
+    "\\begin{align*}\n",
+    "\\frac{dR}{dt}&=R(a-R-bG)\\\\\n",
+    "\\frac{dG}{dt}&=G(c-dR-G).\n",
+    "\\end{align*}\n",
     "\n",
     "You will see a set of sliders to choose the values of the 4 parameters, and boxes for you to enter two lots of initial conditions for $R$ and $G$. When you have chosen your values you will see two plots appear - a time course for Red and Grey squirrels, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue)). You can then change the parameter values or initial conditions.\n",
     "\n",
@@ -133,7 +135,7 @@
    "id": "b138d406",
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-input"
     ]
    },
    "outputs": [],
